# reporunner

./: .biomeignore  .browserslistrc  .dockerignore  .editorconfig  .env.example  .env.template  .eslintrc.js  .gitattributes  .gitignore  .jscpd.json  .jscpdrc.json  .npmrc  .npmrc.bak  .prettierignore  .prettierrc.json  .size-limit.json  .tsbuildinfo  AGENTS.md  APPLICATION_OPTIMIZATION_GUIDE.md  BIOME_COMMIT_FIX.md  BIOME_FIX.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_FIX_SUMMARY.md  COMMIT_SOLUTIONS.md  COMPLETION_ROADMAP.md  CONFIGURATION_FILES.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  DIRECTORY_STRUCTURE.md  DIRECTORY_STRUCTURE_ANALYSIS.md  DOCKER.md  DOCKER_COMPARISON.md  DOCKER_FIXES.md  DOCKER_OPENSOURCE_GUIDE.md  DOCKER_OPENSOURCE_SUMMARY.md  DOCUMENTATION.md  Dockerfile  Dockerfile.backend  (+74 more)
.claude/agents/: changesets-release-manager.json  code-deduplication-validator.md  code-quality-checker.md  credential-security-auditor.json  docker-compose-sync-validator.json  documentation-sync-validator.json  frontend-architecture-optimizer.json  grafana-alertmanager-sync.json  helm-chart-version-sync.json  license-compliance-auditor.json  madge-circular-dependency-reporter.json  monorepo-audit-optimizer.json  node-integration-creator.json  playwright-e2e-generator.json  security-dependabot-checker.json  turborepo-cache-optimizer.json  vitest-coverage-enforcer.json  workflow-json-validator.json
.github/: DEPLOYMENT_TRIGGER.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: biome.yml  bundle-analysis.yml  cd.yml  ci.yml  deploy-preview.yml  docker-publish.yml  docs.yml  jscpd.yml  performance.yml  release.yml  security-audit.yml  vps-deploy.yml
.husky/: commit-msg  pre-commit
development/: dup-report.sh
development/scripts/: biome-migration.sh  block-npm-install.js  build-sdks.sh  create-integration.js  export-openapi.js  mongo-init.js  postgres-init.sql  prepare.js  reset.js  setup-env.js  setup-node.js
docs/: 01_IMPLEMENTED_FEATURES_CONSOLIDATED.md  06_LLM_IMPLEMENTATION_GUIDE.md  ARCHITECTURE_COMPARISON.md  BIOME_SETUP.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  DATABASE_ARCHITECTURE.md  DUPLICATION_REDUCTION.md  ENTERPRISE_SCALING_PLAN.md  ENTERPRISE_SECURITY_IMPLEMENTATION_SUMMARY.md  FEATURES_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  LARGE_SCALE_ARCHITECTURE.md  MIGRATION_IMPORT_RESOLUTION_PLAN.md  PHASE_1_HOTFIXES.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md  WORKFLOW_EDITOR_FEATURES_ANALYSIS.md  WORK_DONE_2025_01_09.md
docs/api/: OPENAPI_README.md  PLUGIN_MARKETPLACE_API.md  WORKFLOW_OPTIMIZATION_API.md  asyncapi.yaml
docs/deployment/: BLUE_GREEN_DEPLOYMENT.md  README.md  VPS_SETUP.md
docs/development/: CHANGELOG.md  CODE_QUALITY.md  README.md
docs/features/: AI_WORKFLOW_OPTIMIZATION.md  PLUGIN_MARKETPLACE.md
docs/history/: 01_IMPLEMENTED_FEATURES_CONSOLIDATED.md  CODE_DEDUPLICATION_GUIDE.md  DOCUMENTATION_CONSOLIDATION_2025.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DUPLICATION_REDUCTION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTED_REAL_TIME_COLLABORATION.md  INDEX.md  PROJECT_HISTORY.md
docs/project-planning/: 02_INFRASTRUCTURE_SCALING_ROADMAP.md  COMPREHENSIVE_PROJECT_ANALYSIS_2025.md  DOCKER_ALL_IN_ONE_SOLUTION.md  INDEX.md  PLATFORM_GAP_ANALYSIS_2025.md
docs/user-guide/: GETTING_STARTED.md  (+2 more)
monitoring/: docker-compose.yml
nginx/: nginx-lb.conf
observability/: README.md  docker-compose.yml
scripts/: README.md  ast-transformer.ts  biome-migration.sh  block-npm-install.js  build-sdks.sh  cleanup-phase1-build-artifacts.js  cleanup-phase2-node-modules.js  cleanup-phase3-test-deduplication.js  cleanup-phase4-empty-files.js  code-quality.json  comprehensive-refactor.ts  consolidate-all-applications.js  consolidate-application-dirs.js  consolidate-application-dirs.ts  eliminate-final-duplicates.js  final-deduplication-phase1.js  final-deduplication-phase2.js  final-deduplication-phase3.js  final-deduplication-phase4.js  final-deduplication-phase5.js  final-deduplication.js  final-duplicate-elimination.js  final-duplication-elimination.js  final-optimization.js  final-push.js  final-targeted-optimization.js  fix-duplicates.js  immediate-refactor.js  install.sh  massive-deduplication-phase1.js  massive-deduplication-phase2.js  massive-deduplication-phase3.js  massive-deduplication-phase4.js  migrate-to-shared.ts  optimize-duplications.js  package-lock.json  package.json  phase2-service-base-classes.js  phase3-auth-components.js  phase4-controller-base-classes.js  (+7 more)
sdks/: README.md
sdks/python/: pyproject.toml
sdks/python/reporunner/: __init__.py  ai.py  auth.py  client.py  credentials.py  exceptions.py  executions.py  types.py  workflows.py
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  lib.rs
tests/: README.md  setup.ts
(+345 files in other folders)
