[package]
name = "klikkflow-sdk"
version = "1.0.0"
edition = "2021"
authors = ["KlikkFlow Team <team@klikkflow.com>"]
description = "Rust SDK for KlikkFlow workflow automation platform"
license = "MIT"
repository = "https://github.com/klikkflow/klikkflow"
homepage = "https://klikkflow.com"
readme = "README.md"
keywords = ["workflow", "automation", "api", "sdk", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]